2002-02-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-halfdump-command-common-arguments): Replace
	`frame-width' with `window-width'.
	(w3m-about-db-history): Ditto.

2002-02-05  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-proc.el (w3m-process-accept-list): New internal variable.
	(w3m-process-filter): Watch `accept? (y/n)' for certification.
	(w3m-process-accept-get, w3m-process-accept-set): New functions.

2002-02-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (w3m-make-ccl-coding-system): Alias to `ignore' if
	no-MULE (the feature `mule' is not provided).
	(coding-system-category): Ditto.
	(define-ccl-program): Define it as an empty macro if no-MULE.

	* w3m.el (TopLevel): Don't require `ccl' if no-MULE.
	(w3m-accept-japanese-characters): Default to nil if no-MULE.
	(w3m-coding-system): Default to `iso-8859-1' if no-MULE.
	(w3m-output-coding-system): Ditto.
	(w3m-file-coding-system): Ditto.
	(w3m-toolbar): Don't express some Japaneses chars directly.

	* w3mhack.el (w3mhack-examine-modules): Don't byte-compile
	w3m-ucs.el, shimbun modules, mime-w3m.el, octet.el and
	w3m-weather.el if no-MULE.

2002-02-05  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-meta-content-type-charset-regexp)
	(w3m-meta-charset-content-type-regexp)
	(w3m-meta-refresh-content-regexp)
	(w3m-meta-content-refresh-regexp): Remove redundant double quote.

	* w3m.el (w3m-content-prepare-functions): New internal contsant.
	(w3m-prepare-content): Refer it.
	(w3m-prepare-text-content): New function.
	(w3m-prepare-image-content): Ditto.

2002-02-05  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-meta-charset-content-type-regexp)
	(w3m-meta-content-refresh-regexp): Allow broken quotation mark.

2002-02-05  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-touch-file): Robust checking.

2002-02-05  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-util.el (w3m-which-command): If called with `not string',
	return nil.
