@@ -1,3 +1,9 @@
+2002-02-07  Yuuichi Teranishi  <teranisi@gohome.org>
+
+	* w3m.el (w3m-fontify-images): Changed regexp to more generic one
+	to search img_alt tag.
+	(w3m-toggle-inline-images-internal): Fixed image redisplay flickers.
+
 2002-02-06  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m.el (w3m-halfdump-command-common-arguments): Replace
